# ai-research-assistant-assessment

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  eval_results.json  main.py  pyproject.toml
app/: main.py
app/agent/: agentrunner.py  graph.py  prompts.py
app/agent/utils/: helper.py  text.py  tool_results.py  tracing.py
app/api/: routes.py
app/core/: audit.py  config.py  data_loader.py  governance.py  models.py
app/mcp_server/: server.py
app/mcp_server/utils/: helper.py
app/schemas/: api.py
tests/: conftest.py  test_app.py  test_runner.py  test_tools.py
tests/evals/: checks.py  eval-report.json  golden.json  run_eval.py
